k8s/authmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"5"},"creationTimestamp":"2026-01-08T00:24:41Z","generation":5,"labels":{"app":"authmanager","app.kubernetes.io/component":"backend","app.kubernetes.io/managed-by":"kustomize","app.kubernetes.io/name":"authmanager","app.kubernetes.io/part-of":"muzika-platform","app.kubernetes.io/version":"0.0.1"},"name":"authmanager","namespace":"muzika","resourceVersion":"252414","uid":"77162b91-8623 [...]
  creationTimestamp: "2026-01-08T00:24:41Z"
  generation: 7
  labels:
    app: authmanager
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: authmanager
    app.kubernetes.io/part-of: muzika-platform
    app.kubernetes.io/version: 0.0.1
  name: authmanager
  namespace: muzika
  resourceVersion: "253985"
  uid: 77162b91-8623-47f4-ae8c-9b400c734d92
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: authmanager
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/part-of: muzika-platform
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-01-08T11:24:44+01:00"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8091"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: authmanager
        app.kubernetes.io/component: backend
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: authmanager
        app.kubernetes.io/part-of: muzika-platform
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - authmanager
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - env:
        - name: JAVA_TOOL_OPTIONS
          value: -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0
        image: digeper.azurecr.io/muzika/authmanager:0.0.1-SNAPSHOT-2623cc5
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/liveness
            port: 8091
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: authmanager
        ports:
        - containerPort: 8091
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: 8091
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /actuator/health
            port: 8091
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/secrets-store
          name: secrets-store
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccount: authmanager-sa
      serviceAccountName: authmanager-sa
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app: authmanager
            app.kubernetes.io/managed-by: kustomize
            app.kubernetes.io/part-of: muzika-platform
        maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-keyvault-secrets
        name: secrets-store
status:
  conditions:
  - lastTransitionTime: "2026-01-08T00:24:41Z"
    lastUpdateTime: "2026-01-08T00:24:41Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-01-08T10:19:32Z"
    lastUpdateTime: "2026-01-08T10:24:44Z"
    message: ReplicaSet "authmanager-64d44ddddc" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 7
  replicas: 3
  unavailableReplicas: 3
  updatedReplicas: 1
